# dreamberd-interpreter

./: .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  pyproject.toml
dreamberd/: __init__.py  base.py  builtin.py  interpreter.py  serialize.py
dreamberd/processor/: expression_tree.py  lexer.py  syntax_tree.py
examples/: array_testing.db  mandelbrot.db  sierpinski.db  string_testing.db
